compiler/test-data/parser/errors/syntax_errors/missing_brace.frel
module test

blueprint Hello
    text { "Hello" }
}
